dropshot/tests/fail/bad_endpoint21.stderr
error: endpoint handlers must have the following signature:
           async fn(
               rqctx: dropshot::RequestContext<MyContext>,
               [query_params: Query<Q>,]
               [path_params: Path<P>,]
               [body_param: TypedBody<J>,]
               [body_param: UntypedBody,]
               [body_param: StreamingBody,]
               [raw_request: RawRequest,]
           ) -> Result<HttpResponse*, impl HttpResponseError>
  --> tests/fail/bad_endpoint21.rs:24:1
   |
24 | / async fn variadic_argument(
25 | |     _rqctx: RequestContext<()>,
26 | |     _param1: Query<QueryParams>,
27 | |     ...
28 | | ) -> Result<HttpResponseOk<()>, HttpError> {
   | |__________________________________________^

error: endpoint `variadic_argument` must not have a variadic argument
  --> tests/fail/bad_endpoint21.rs:27:5
   |
27 |     ...
   |     ^^^

warning: missing pattern for `...` argument
  --> tests/fail/bad_endpoint21.rs:27:5
   |
27 |     ...
   |     ^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #145544 <https://github.com/rust-lang/rust/issues/145544>
   = note: `#[warn(varargs_without_pattern)]` (part of `#[warn(future_incompatible)]`) on by default
help: name the argument, or use `_` to continue ignoring it
   |
27 |     _: ...
   |     ++
